Fixed Replace Image Created routes, and endpoints for delete image
